--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,11 @@ jobs:
 
       - name: Build
         run: |
-          pip install -r requirements.txt
+          pip3 install -r requirements.txt
 
       - name: Test
         run: |
-          python manage.py test
+          python3 manage.py test
 
   deploy:
     runs-on: ubuntu-latest
