--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Build
         run: |
+          sudo apt-get install python3-setuptools
           pip3 install -r requirements.txt
 
       - name: Test
