--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,3 +48,10 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKER_USER }}/mango:${{ github.sha }}
           docker push ${{ secrets.DOCKER_USER }}/mango:latest
+
+      - name: Deploy compose file
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: docker
+          FOLDER: compose
