--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Build
         run: |
           sudo apt-get install python3-setuptools
-          pip3 install -r requirements.txt
+          sudo pip3 install -r requirements.txt
 
       - name: TestAndCoverage
         run: |
