--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -18,6 +18,8 @@ jobs:
         run: |
           sed -i mangoWeb/settings.py -e 's/"HOST": "db"/"HOST": "localhost"/g'
           docker run --name postgres -e POSTGRES_PASSWORD=meow -d -p 5432:5432 postgres
+          python3 manage.py makemigrations
+          python3 manage.py migrate
 
           coverage run manage.py test
           coverage report
