--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -3,8 +3,19 @@ name: unit_test
 on: ["push", "pull_request"]
 
 jobs:
-  test:
+  vm-job:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:10.8
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: meow
+          POSTGRES_DB: postgres
+        ports:
+          - 5432/tcp
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - uses: actions/checkout@v2
@@ -17,7 +28,6 @@ jobs:
       - name: TestAndCoverage
         run: |
           sed -i mangoWeb/settings.py -e 's/"HOST": "db"/"HOST": "localhost"/g'
-          docker run --name postgres -e POSTGRES_PASSWORD=meow -d -p 5432:5432 postgres
           python3 manage.py makemigrations
           python3 manage.py migrate
 
