--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -28,6 +28,7 @@ jobs:
       - name: TestAndCoverage
         run: |
           sed -i mangoWeb/settings.py -e 's/"HOST": "db"/"HOST": "localhost"/g'
+          sed -i mangoWeb/settings.py -e 's/"PORT": "5432"/"PORT": "${{ job.services.postgres.ports[5432] }}"/g'
           python3 manage.py makemigrations
           python3 manage.py migrate
 
